Creating the about page

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/font/font-mfizz.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <title>React App</title>
+    <script src="https://use.fontawesome.com/3f0f98fffd.js"></script>
   </head>
   <body>
     <noscript>
