Adding GA tracking

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      Holy Git is a website where you can see statistics about GitHub accounts.
     </noscript>
     <div id="root"></div>
   </body>
